crates/rlf-macros/tests/fail/unclosed_brace.rs
use rlf::rlf;

rlf! {
    bad = "{name";
}

fn main() {}
