crates/rlf-macros/tests/fail/unclosed_brace.stderr
error: unclosed interpolation brace
 --> tests/fail/unclosed_brace.rs:4:11
  |
4 |     bad = "{name";
  |           ^^^^^^^
